--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.20.2",
+    "express": "^4.17.1",
+    "moment": "^2.29.4",
+    "mongodb": "^5.7.0"
   }
 }
