--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = "mongodb://mongo:G6EDsbBFXaGJvmfZM2AR@containers-us-west-103.railway.app:5531"
+MONGO_URL = "mongodb+srv://rohitkptn:w2EdmZzlKDgMMo1q@cluster0.e5xjv1b.mongodb.net/"
