--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "moment": "^2.29.4",
-    "mongodb": "^5.7.0"
+    "mongoose": "^7.4.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
