--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL = "mongodb+srv://rohitkptn:w2EdmZzlKDgMMo1q@cluster0.e5xjv1b.mongodb.net/"
+# MONGO_URL = "mongodb+srv://rohitkptn:w2EdmZzlKDgMMo1q@cluster0.e5xjv1b.mongodb.net/"
+MONGO_URL = "mongodb://mongo:cGn5rGErc3PkTwPNT1of@containers-us-west-126.railway.app:6107"
