--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
-    "moment": "^2.29.4",
     "mongoose": "^7.4.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "nodemon": "^3.0.1"
   }
 }
