--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
-    "mongoose": "^7.4.3"
+    "moment": "^2.29.4",
+    "mongoose": "^7.4.3",
+    "sse-express": "^1.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
